Simple order run-through test of site on mobile and desktop now works smoothly. Fixex some logic for the forms, removed some fields of the address form as per instruction, city field now not missing a star --; Todo: Css on phone select field needs fixing --; I want red select if the user hasn’t touched the time slot select --; Need to get rid of the underlines for incorrect spelling in the input --; Fix scrolling on all the mobile pages. It gets stuck on mobile --; Picture boxes on front page need to be size fixed --; If user unblocks remember me it needs to erase user data from local storage

--- a/src/app/css/webflow.css
+++ b/src/app/css/webflow.css
@@ -34,6 +34,10 @@ page-storefront{
   filter: brightness(33%);
 }
 
+.error{
+  border: 1px solid red !important;
+}
+
 
 .inactive-order-button {
   position: -webkit-sticky;
