--- a/src/app/mob-cart/mob-cart.component.css
+++ b/src/app/mob-cart/mob-cart.component.css
@@ -2394,7 +2394,7 @@
 }
 
 body {
-  overflow: visible;
+  overflow: auto;
   font-family: Montserrat, sans-serif;
   color: #1a1b1f;
   font-size: 16px;
